GNOME Bugzilla – Bug 699800
st-bin: Delegate popup-menu signal to child if we have one
Last modified: 2013-05-07 09:15:34 UTC
This makes it much easier to implement correct popup-menu behavior in the case of nested bins. This fixes the context button in application search results when the button has focus.
Created attachment 243455 [details] [review] st-bin: Delegate popup-menu signal to child if we have one
Review of attachment 243455 [details] [review]: Yeah, this makes sense. Maybe tweak that 2nd sentence a bit as it's confusing now: This fixes the context menu key in application search results when a result has focus.
it # Bug 699800 - st-bin: Delegate popup-menu signal to child if we have one - NEW Attachment 243455 [details] pushed as 660b801 - st-bin: Delegate popup-menu signal to child if we have one