src/st/st-widget.c
@@ -775,7 +775,7 @@ st_widget_key_press_event (ClutterActor    *actor,
       (event->keyval == CLUTTER_KEY_F10 &&
        (event->modifier_state & CLUTTER_SHIFT_MASK)))
     {
-      g_signal_emit (actor, signals[POPUP_MENU], 0);
+      st_widget_popup_menu (ST_WIDGET (actor));
       return TRUE;
     }
 
@@ -1832,6 +1832,18 @@ st_widget_get_can_focus (StWidget *widget)
   g_return_val_if_fail (ST_IS_WIDGET (widget), FALSE);
 
   return widget->priv->can_focus;
+}
+
+/**
+ * st_widget_popup_menu:
+ * @self: A #StWidget
+ *
+ * Asks the widget to pop-up a context menu.
+ */
+void
+st_widget_popup_menu (StWidget *self)
+{
+  g_signal_emit (self, signals[POPUP_MENU], 0);
 }
 
 /* filter @children to contain only only actors that overlap @rbox
